--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -28,6 +28,9 @@
 
                 article, .single article {
                     div.article-meta {
+                        
+                        display: inherit;
+
                         ul.article-info {
                             li {
                                 &.reading-time {
